<?xml version="1.0"?>
<package format="3">
  <name>cartpole_controller</name>
  <version>0.0.0</version>
  <description>cartpole_controller node</description>
  <maintainer email="your_email@example.com">Kai</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <buildtool_depend>ament_python</buildtool_depend>
  <exec_depend>rclpy</exec_depend>
  <exec_depend>cartpole_interfaces</exec_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
